proptest-attributes/tests/compile-fail/wrong_attribute.stderr
error: cannot find attribute `foobar` in this scope
 --> $DIR/wrong_attribute.rs:4:19
  |
4 | fn function_arn(#[foobar] arg: String) {}
  |                   ^^^^^^
